pi/cluster/apps/hue-exporter/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hue-exporter
  namespace: hue-exporter
  labels:
    app: hue-exporter
spec:
  selector:
    app: hue-exporter
  ports:
    - name: http
      protocol: TCP
      port: 9366
