pi/cluster/apps/hue-exporter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: hue-exporter
  namespace: hue-exporter
spec:
  rules:
    - host: "hue-exporter.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hue-exporter
                port:
                  number: 9366
